# study-notes

./: .gitignore  AWS-notes.txt  Go_notes.md  LICENSE  algorithm.md  coding_notes.txt  frontend and visuals.md  java.md  js_notes.md  ml.md  non-web notes.md  python.md  relevant-search.md  ruby.md  system-design.md  til.md  web_notes.md  zafin-learning.md
case-studies/: anon-kode.md  bolt.md  browser-use.md  dyad.md  lovable.md  openhands.md
css/: flex-grow.html
data structure and algorithm/: algorithm.md  logs.csv
data-structure-and-algorithm/: algorithm.md  logs.csv
ml/: README.md  engineering.md  fastai-examples.ipynb  fastai.md  gpt-attention.ipynb  llm-from-scratch.ipynb  micrograd.html  micrograd.ipynb  ml.md  pyproject.toml  rl.md
ml/fastai/: adam.ipynb  broadcasting.ipynb  cf.ipynb  cnn.ipynb  dataloader.ipynb  dropout.ipynb  fastai.md  nn.ipynb  resnet.ipynb  rnn-quarry.ipynb  rnn.ipynb  sgd.ipynb  wd.ipynb
react/: react.md
